Add offgridTimeout to properties and monitor offgrid state
Introduce a new property `offgridTimeout` in EcoflowProperties and application.yml to specify the timeout duration. Update MqttSubscriber to monitor and gauge the offgrid state based on this new timeout.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ ecoflow:
     email: ${ECOFLOW_USERNAME}
     password: ${ECOFLOW_PASSWORD}
   offlineTimeout: PT1m
+  offgridTimeout: PT1m
   devices: ${ECOFLOW_DEVICES}
 
 httpClient:
